--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a>Home Page |</a>
         <a href = "feed/feed.html"> Enter </a> 
     </nav>
-    <img src="/img/rubiksgif.gif"
+    <img src="img/rubiksgif.gif"
     alt="rubik's cube moving like it's being solved.">
 </body>
                    
