--- a/feed/feed.html
+++ b/feed/feed.html
@@ -22,19 +22,19 @@
     <h1>THE FEED</h1>
 <section>
     <fig>
-        <img src= "/feed/img/cryptogram.png " alt="Picture of cryptogram game app">
+        <img src= "feed/img/cryptogram.png " alt="Picture of cryptogram game app">
         <figcaption>This is a new game my friend introduced me to and it is quickly becoming an obsession. It's so fun!</figcaption>
     </fig>
     <br>
     <br>
     <fig>
-        <img src="/feed/img/whatsapp.png" alt="Pictue of groupchat in WhatsApp talking about the King's cancer diagnosis">
+        <img src="feed/img/whatsapp.png" alt="Pictue of groupchat in WhatsApp talking about the King's cancer diagnosis">
         <figcaption> This is a picture of my family groupchat, King Charles getting cancer was a big deal.</figcaption>
     </fig>
     <br>
     <br>
     <fig>
-        <img src="/feed/img/weatherapp.png" alt="Picture of weather app depicting the weather for that day">
+        <img src="feed/img/weatherapp.png" alt="Picture of weather app depicting the weather for that day">
         <figcaption>This is my favorite app, I think I use this more than any social media app. I check about 10 times a day. </figcaption>
     </fig>
     <br>
@@ -68,7 +68,7 @@
   </section> 
   <section>
     <fig>
-        <img src="/feed/img/alarms.png" alt="Picture of the an alarm being set on an Iphone">
+        <img src="feed/img/alarms.png" alt="Picture of the an alarm being set on an Iphone">
         <figcaption>
             This is a picture of one of the 20 millions alarms I have to set for the next day.
         </figcaption>
@@ -76,7 +76,7 @@
     <br>
     <br>
     <fig>
-        <img src="/feed/img/depop.png" alt="picture of depop home screen.">
+        <img src="feed/img/depop.png" alt="picture of depop home screen.">
         <figcaption>
             This is a picture of my depop homescreen. I love depop, not even for buying, I just like looking at clothes.
         </figcaption>
@@ -84,7 +84,7 @@
     <br>
     <br>
     <fig>
-        <img src="/feed/img/letterbox.png" alt="picture of movie lists on letterboxd.">
+        <img src="feed/img/letterbox.png" alt="picture of movie lists on letterboxd.">
         <figcaption>
             Another one of my favorite apps is Letterboxd, I like going in to look for new movies.
         </figcaption>
@@ -94,7 +94,7 @@
     <br>
   <section>
     <fig>
-        <img src="/feed/img/sudoku.png" alt="picture of a sudoko being halfway done">
+        <img src="feed/img/sudoku.png" alt="picture of a sudoko being halfway done">
         <figcaption>
             I recently discovered sudoko and I love it. It's a lot easier than I thought.
         </figcaption>
@@ -102,7 +102,7 @@
     <br>
     <br>
     <fig>
-        <img src="/feed/img/youtubescreenchot.jpg" alt=" screenshot of a youtube "hot ones" video.">
+        <img src="feed/img/youtubescreenchot.jpg" alt=" screenshot of a youtube "hot ones" video.">
         <figcaption>
             I don't watch youtube as much anymore, but I still go in sometimes to watch Hot Ones.
         </figcaption>
@@ -110,7 +110,7 @@
     <br>
     <br>
     <fig>
-        <img src="/feed/img/restaurantpic.png" alt="google screenshot showing name of restaraunt">
+        <img src="feed/img/restaurantpic.png" alt="google screenshot showing name of restaraunt">
         <figcaption>
             This is a restaraunt that my friends and I like to go to, it is so good 10/10 reccommend.
         </figcaption>
