update (first finish)

--- a/feed/feed.html
+++ b/feed/feed.html
@@ -104,7 +104,7 @@
     <fig>
         <img src="img/youtubescreenchot.jpg" alt=" screenshot of a youtube "hot ones" video.">
         <figcaption>
-            I don't watch youtube as much anymore, but I still go in sometimes to watch Hot Ones.
+            I don't watch youtube as much anymore, but I still go on it sometimes to watch Hot Ones.
         </figcaption>
     </fig>
     <br>
