--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <a>Home Page |</a>
         <a href = "feed/feed.html"> Enter </a> 
     </nav>
-    <img src="img/rubiksgif.gif"
-    alt="rubik's cube moving like it's being solved.">
+    <a href="feed/feed.html"><img src="img/rubiksgif.gif"> </a>
+   
 </body>
                    
 </html>
