--- a/feed/feed.html
+++ b/feed/feed.html
@@ -102,7 +102,7 @@
     <br>
     <br>
     <fig>
-        <img src="img/youtubescreenchot.jpg" alt=" screenshot of a youtube "hot ones" video.">
+        <img src="img/youtubescreenchot.png" alt=" screenshot of a youtube "hot ones" video.">
         <figcaption>
             I don't watch youtube as much anymore, but I still go on it sometimes to watch Hot Ones.
         </figcaption>
