--- a/feed/feed.html
+++ b/feed/feed.html
@@ -8,18 +8,15 @@
     <link rel="stylesheet" href="style.css">
     <title>The Feed</title>
     <link rel="stylesheet" href="https://use.typekit.net/kvz3zce.css">
+    <link rel="stylesheet" href="https://use.typekit.net/kvz3zce.css">
 
 </head>
 
 <body>
-    <p style="background-image: url(img/background.jpeg);"></p>
-    <nav>
-        <a href = "../index.html"> Back | </a>
-        <a> Feed </a> 
-    </nav>
-    <br>
-    <hr>
-    <h1>THE FEED</h1>
+   
+    <a href = "../index.html"> <h1>THE FEED</h1></a>
+    
+    <h3> test test test</h3>
 <section>
     <fig>
         <img src="img/youtubescreenchot.png" alt=" screenshot of a youtube "hot ones" video.">
