--- a/feed/feed.html
+++ b/feed/feed.html
@@ -11,18 +11,27 @@
     <link rel="stylesheet" href="https://use.typekit.net/kvz3zce.css">
 
 </head>
-
+<a>
+    <a href = "../index.html"> <h1>THE FEED</h1>
+</a>
 <body>
-   
-    <a href = "../index.html"> <h1>THE FEED</h1></a>
-    
-    <h3> test test test</h3>
 
+    <h2>Hello! Welcome to my feed, this is a little sneak peak into my daily phone habits. </h2>
+
+    <header>
+        <a href = "../index.html">
+            <img src="../img/rubiksgif.gif" width="300px" alt=" rubiks cube being solved>" >
+        </a>
+    </header>
+
+    <a>
+        
+    </a>
 <section>
     <fig>
         <img src="img/youtubescreenchot.png" alt=" screenshot of a youtube "hot ones" video.">
         <figcaption>
-            I don't watch youtube as much anymore, but I still go on it sometimes to watch Hot Ones.
+            I don't watch youtube as much anymore, but I still go on it sometimes and one of the things I like to watch is Hot Ones. 
         </figcaption>
     </fig>
     <br>
@@ -36,18 +45,18 @@
     <br>
     <br>
     <fig>
-        <img src="img/weatherapp.png" alt="Picture of weather app depicting the weather for that day">
-        <figcaption>This is my favorite app, I think I use this more than any social media app. I check about 10 times a day. </figcaption>
+        <img src="img/letterbox.png" alt="picture of movie lists on letterboxd.">
+        <figcaption>
+            Another one of my favorite apps is Letterboxd, I like going in to look for new movies and log any recent movies I've seen.
+        </figcaption>
     </fig>
     <br>
     <br>
   </section>  
   <section>
     <fig>
-        <img src="img/restaurantpic.png" alt="google screenshot showing name of restaraunt">
-        <figcaption>
-            This is a restaraunt that my friends and I like to go to, it is so good 10/10 reccommend.
-        </figcaption>
+        <img src= "img/salad.jpg " alt="Picture of a bowl of salad">
+        <figcaption>I'm starting to cook for myself more, and I have been very into chicken salads. This is one I did the other day and like to send a pic to my parents so they know I can actually cook.</figcaption>
     </fig>
     <br>
     <br>
@@ -60,40 +69,18 @@
     <br>
     <br>
     <fig>
+        <img src= "img/concert.png" alt="Pictue ticketmaster showing an upcoming concert for the band Belle and Sebastian">
+        <figcaption> I like to go on ticketmaster and see if any artists I like are doing a show soon. I really like Belle & Sebastian but the concert is during finals week.</figcaption>
+    </fig>
+    <fig>
         <video width="500" height="450" loop autoplay muted> 
             <source src="img/pinterestclip.mp4" type="video/mp4">
         </video>
-        <figcaption> This is a clip on me scrolling on one of my favorite apps, Pinterest.</figcaption>
+        <figcaption> I love to scroll on Pinterest, either to look for inspiration or just as a fun way to relax and look at cool things.</figcaption>
     </fig>
     <br>
     <br>
   </section> 
-  <section>
-    <fig>
-        <img src="img/alarms.png" alt="Picture of the an alarm being set on an Iphone">
-        <figcaption>
-            This is a picture of one of the 20 millions alarms I have to set for the next day.
-        </figcaption>
-    </fig>
-    <br>
-    <br>
-    <fig>
-        <img src="img/depop.png" alt="picture of depop home screen.">
-        <figcaption>
-            This is a picture of my depop homescreen. I love depop, not even for buying, I just like looking at clothes.
-        </figcaption>
-    </fig>
-    <br>
-    <br>
-    <fig>
-        <img src="img/letterbox.png" alt="picture of movie lists on letterboxd.">
-        <figcaption>
-            Another one of my favorite apps is Letterboxd, I like going in to look for new movies.
-        </figcaption>
-    </fig>
-  </section>   
-    <br>
-    <br>
   <section>
     <fig>
         <img src="img/sudoku.png" alt="picture of a sudoko being halfway done">
@@ -104,14 +91,34 @@
     <br>
     <br>
     <fig>
-        <img src= "img/cryptogram.png " alt="Picture of cryptogram game app">
-        <figcaption>This is a new game my friend introduced me to and it is quickly becoming an obsession. It's so fun!</figcaption>
+        <img src="img/depop.png" alt="picture of depop home screen.">
+        <figcaption>
+             I love depop, not even for buying, I just like looking at clothes, it's a problem that app drains my battery like crazy.
+        </figcaption>
     </fig>
     <br>
     <br>
     <fig>
-        <img src= "img/whatsapp.png" alt="Pictue of groupchat in WhatsApp talking about the King's cancer diagnosis">
-        <figcaption> This is a picture of my family groupchat, King Charles getting cancer was a big deal.</figcaption>
+        <img src="img/weatherapp.png" alt="Picture of weather app depicting the weather for that day">
+        <figcaption>This is my favorite app, I think I use this more than any social media app. I check it about 10 times a day. You never know with SF weather. </figcaption>
+    </fig>
+  </section>   
+    <br>
+    <br>
+  <section>
+    <fig>
+        <img src="img/alarms.png" alt="Picture of the an alarm being set on an Iphone">
+        <figcaption>
+            I need about 20 million alarms to function.
+        </figcaption>
+    </fig>
+    <br>
+    <br>
+    <fig>
+        <img src="img/restaurantpic.png" alt="google screenshot showing name of restaraunt">
+        <figcaption>
+            This is a restaraunt that my friends and I like to go to, it is so good 10/10 reccommend.
+        </figcaption>
     </fig>
 </section>
 </body>
